--- a/src/router/login/Login.css
+++ b/src/router/login/Login.css
@@ -1,80 +1,121 @@
-.login {
-    width: 30% ;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.Profile {
+  background: dodgerblue;
+  width: 100%;
+  box-shadow: none;
+  height: 100vh;
+}
+
+.login__card {
+  width: 25%;
+  height: 80vh;
+  background: #fff;
+  border-radius: 5px;
+  margin-left: 37%;
+  padding: 30px 10px;
+  flex-wrap: wrap;
+}
+
+.facebook {
+  width: 100%;
+  height: 45px;
+  background: transparent;
+  border-radius: 2px solid black;
+  font-size: 20px;
+  padding-left: 2%;
+  padding-right: 2%;
+  border-radius: 2px solid;
+}
+
+.face {
+  color: dodgerblue;
+  font-size: 25px;
+}
+
+.apple {
+  font-size: 25px;
+}
+
+.google {
+  font-size: 25px;
+}
+
+.login__card h1 {
+  font-weight: 100;
+  font-size: 14px;
+  color: rgb(87, 85, 85);
+  margin-top: 3%;
+}
+
+.login__card input {
+  width: 100%;
+  height: 40px;
+  outline: none;
+  border-radius: 4px;
+  border: none;
+  background: rgb(231, 229, 229);
+  padding-left: 2%;
+}
+
+.login__card h3 {
+  font-weight: 700;
+  font-size: 14px;
+  color: rgb(28, 27, 27);
+  margin-top: 8%;
+}
+
+.enter {
+  width: 100%;
+  background: #002F34;
+  height: 55px;
+  color: white;
+  border: 2px solid #002F34;
+  font-size: 24px;
+  margin-top: 1%;
+  outline: none;
+  border-radius: 3px;
+}
+
+h4 {
+  font-size: 14px;
+  margin-top: 12%;
+  font-weight: 100;
+}
+
+.login__card span {
+  font-weight: 600;
+}
+
+@media screen and (max-width: 768px) {
+  .login__card {
+    width: 80%;
+    margin-left: 10%;
+    height: auto;
+    padding: 20px 10px;
   }
   
-  .title {
-    font-weight: 600;
-    font-size: 25px;
-    padding-top: 10px;
-  }
-  
-  .subtitle {
-    font-weight: 100;
-    padding-top: 5px;
-  }
-  
-  .input {
-    width: 100%;
-    background-color: #eee;
-    padding: 10px;
-    margin-bottom: 10px;
-    margin-top: 40px;
-    border: none;
-    border-radius: 10px;
-  }
-  
-  .button {
-    width: 100%;
-    background-color: var(--bg-py);
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 10px;
+  .facebook,
+  .enter {
     font-size: 18px;
-    margin-bottom: 10px;
-    margin-top: 20px;
+    height: 40px;
   }
   
-  .footer__login {
-    text-align: center;
+  .face,
+  .apple,
+  .google {
+    font-size: 20px;
   }
   
-  .footer-text {
-    margin-top: 20px;
-    line-height: 1.5;
-  }
-  .footer__login p{
-    margin-top: 20px;
-  }
-  .close-icon{
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-  }
-  @media (max-width: 1086px) {
-    .login{
-      width: 60%;
-    }
-  }
-  @media (max-width: 990px) {
-    .login{
-      width: 60%;
-    }
+  .login__card h1,
+  .login__card h3 {
+    font-size: 12px;
   }
   
-  @media (max-width: 600px) {
-    .login {
-      width: 80%;
-    }
+  .login__card input {
+    height: 35px;
   }
   
-  @media (max-width: 300px) {
-    .login {
-      width: 100%;
-    }
+  h4 {
+    margin-top: 10%;
+    font-size: 12px;
   }
+}
